refactor: Refactored OSEXPLORER DoubleClick and SelectionChange events into own classes